@@ -41,7 +41,6 @@ static char sccsid[] = "@(#)clnt_simple.c 1.35 87/08/11 Copyr 1984 Sun Micro";
 #include <stdio.h>
 #include <rpc/rpc.h>
 #include <sys/socket.h>
-#include <netdb.h>
 #include <string.h>
 
 static struct callrpc_private {
