@@ -53,7 +53,6 @@ static char sccsid[] = "@(#)clnt_tcp.c 1.37 87/10/05 Copyr 1984 Sun Micro";
 #include <stdio.h>
 #include <rpc/rpc.h>
 #include <sys/socket.h>
-#include <netdb.h>
 #include <errno.h>
 #include <rpc/pmap_clnt.h>
 
