@@ -43,7 +43,6 @@ static char sccsid[] = "@(#)pmap_getmaps.c 1.10 87/08/11 Copyr 1984 Sun Micro";
 #include <rpc/pmap_prot.h>
 #include <rpc/pmap_clnt.h>
 #include <sys/socket.h>
-#include <netdb.h>
 #include <stdio.h>
 #include <errno.h>
 #ifdef OSF1
